--- a/src/Assets/scss/landingPage.scss
+++ b/src/Assets/scss/landingPage.scss
@@ -1,148 +1,97 @@
 @import "_config.scss";
-.landing-header{
-    background-image: url('./../img/landingpage/landing@2x.png');
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
+.header{
+   
+    // text-shadow: 2px 2px 4px #00000042;
+    display: flex;
+    flex-direction: row;
     height:100vh;
-    margin-top:-100px;
-    section{
-        float:left;
-        width:50%;
+    weight:100vw;
+    .header-left{
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height:100%;
-        h1,h2{
-            color:$white;
-            width:510px;
-            margin:0 auto;
-            text-align: left; 
+        flex-direction: row;
+        width:40%;
+       
+        .header-left-left{
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            justify-content: space-between;
            
-        }
-        h1{
-            line-height:70px;
-            
-        }
-        h2{
-            line-height:90px;
-        }
-        h3{
-            margin: 0;
-        }
-        a{
-            border-radius: 10px;
+            padding:60px 0px 60px 60px;  
+            font-family: 'Playfair Display', serif;
+                .detail{
+                    h1{
+                        
+                        font-size: 70px;
+                        margin:0px;
+                       letter-spacing: 5px;
+                    }
+                    p{
+                        font-size: 30px;
+                        margin:10px 0px;
+                    }
+                }      
+                 .logo{
+                    width:100px;
+                    height:100px;
+                }         
+                .welcome{
+                    h1{
+                        font-size: 70px;
+                        margin:10px 0px;
+                        letter-spacing: 5px;
+                    }
+                    p{
+                        font-size: 30px;
+                        margin:10px 0px;
+                    }
+                }  
+                .basicBtn{
+                    display: inline-block;
+                    margin-top: 10px;
+                }
         }
     }
-    .landing-header-btn{
-        width:510px;
-        margin:10px auto 0 auto;
-        display: flex;
-    }
-}
-.landing-body{
-    width:80%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-radius: 10px;
-    box-shadow: 0px 6px 6px #00000029;
-    top: -110px;
-    position: relative;
-    background-color: #fff;
-    padding:30px 100px;
     
-    section:nth-child(1){
+    .header-right{
+        font-family: 'Ibarra Real Nova', serif;
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
-        border-bottom: 1px solid #BCBCBC;
-        .landing-body-first-part{
-            width:30%;
-            text-align:center;
-            h3{
-                margin-top:90px;
-                margin-bottom:70px;
+        width:60%;
+        .header-right-left{
+            height:100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            width:160px;
+            .developer{
+                font-size:140px;
+                font-weight: bold;
+                font-family: 'Playfair Display', serif;
+                color:rgb(240, 240, 240);
+                transform: rotate(-90deg);
+                margin:0px;
+                letter-spacing: 10px;
+              
             }
+        }
+       
+     
+        .me{
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+            height:100%;
+        }
+        .name{
+            width:100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             p{
-                margin-bottom:120px;
+                color:#000;
+                font-size: 40px;
+                transform: rotate(90deg);
             }
         }
     }
-    section:nth-child(2){
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        border-bottom: 1px solid #BCBCBC;
-        width: 100%;
-        height: 600px;
-        .landing-body-second-part1,.landing-body-second-part2{
-            width:50%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            h2{
-                margin-bottom:70px;
-            }
-            h4{
-               margin:auto;
-               margin-right:60px;
-
-            }
-            .status-list{
-                display: flex;
-                flex-direction: row;
-                align-self:center;
-                justify-content: space-between;
-                margin-bottom:50px;
-                span{
-                    display: flex;
-
-                }
-            }
-        }
-    }
-    section:nth-child(3){
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        border-bottom: 1px solid #BCBCBC;
-        width: 100%;
-        height: 600px;
-        .landing-body-third-part1,.landing-body-third-part2{
-            width:50%;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            h2{
-                margin-bottom:70px;
-            }
-            h4{
-               margin:auto;
-               margin-right:60px;
-
-            }
-            .product-list{
-                display: flex;
-                flex-direction: row;
-                align-self:center;
-                justify-content: space-between;
-                margin-bottom:50px;
-                span{
-                    display: flex;
-
-                }
-            }
-        }
-    }
-}
-.history{
-    padding:20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
