--- a/src/Assets/scss/landingPage.scss
+++ b/src/Assets/scss/landingPage.scss
@@ -123,11 +123,11 @@
             }
         }
        
-     
+        
         .me{
-            //box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-            height:100%;
-
+            box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+            height:99%;
+           
 
         }
         .name{
@@ -210,19 +210,56 @@
                 margin:0px;
             }
             .works{
-                width:400px;
+               
+                @include xxxl-width{
+            
+                    width:400px;
+                }
+                @include xxl-width{
+                    
+                    width:400px;
+                }
+           
+                @include xl-width{
+                    width:300px;
+                }
             }
             .works-mobile{
-                width:180px;
+              
+                @include xxxl-width{
+            
+                    width:180px;
+                }
+                @include xxl-width{
+                    
+                    width:180px;
+                }
+           
+                @include xl-width{
+                    width:150px;
+                }
             }
             .works-big{
-                width:700px;
+                
+                @include xxxl-width{
+            
+                    width:700px;
+                }
+                @include xxl-width{
+                    
+                    width:550px;
+                }
+           
+                @include xl-width{
+                    width:450px;
+                }
             }
             .image{
                 display: flex;
                 align-items: center;
                 justify-content: center;
                 height:450px;
+
             }
         }
     }
@@ -236,7 +273,7 @@
     font-family: 'Playfair Display', serif;
     padding:0px 5%; 
     h1{
-        font-size: 60px;
+        font-size: 36px;
         letter-spacing: 5px;
     }
     .academic-section{
@@ -259,11 +296,29 @@
                 justify-content: space-between;
             }
             .aca-image{
-                display: flex;
+               
+                @include xxxl-width{
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: space-around;
+                    margin:60px 0px;
+                }
+                @include xxl-width{
+                    display: flex;
                 flex-direction: row;
                 align-items: center;
                 justify-content: space-around;
                 margin:60px 0px;
+                }
+           
+                @include xl-width{
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: space-around;
+                    margin:60px 0px;
+                }
             }
             .aca-title{
                 position: absolute;
@@ -287,6 +342,17 @@
             }
             .image-aca-mobile{
                 width:180px;
+                @include xxxl-width{
+                    width:180px;
+                }
+                @include xxl-width{
+                    width:180px;
+                }
+           
+                @include xl-width{
+                    width:180px;
+                    margin-top:60px;
+                }
             }
             .aca-link{
                 float:right;
